fix: properly layout the notification header and elide urls

We use two nested |BoxLayout|s to layout the notification header. This
CL uses the shiny new |FlexLayout| which is already in use by the
|ToolbarView| to prevent very long URLs from moving the control buttons
off the side. Also set the correct text elide behaviour to trim URLs
from the start to see the TLDs.

Bug: 915224
Change-Id: I662eb4e7f71356e8d441229c2e01b7b2da0caa95
Reviewed-on: https://chromium-review.googlesource.com/c/1384372
Commit-Queue: Richard Knoll <knollr@chromium.org>
Reviewed-by: Peter Beverloo <peter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618327}
Former-commit-id: 8defb9b5b1cc44033c22761a21a5fec392f430c9